@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.earthtv_com" version="1.0.0" name="earthTV" provider-name="M. King">
+<addon id="plugin.video.earthtv_com" version="1.0.2" name="earthTV" provider-name="M. King">
     <requires>
         <import addon="xbmc.python" version="2.6.0"/>
         <import addon="script.module.buggalo" version="1.1.2"/>
